deploy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubelab-statefulset
  namespace: kubelab
spec:
  serviceName: "kubelab-service"
  replicas: 1
  selector:
    matchLabels:
      app: kubelab
  template:
    metadata:
      labels:
        app: kubelab
    spec:
      serviceAccountName: kubelab-admin
      containers:
      - name: kubelab
        image: ghcr.io/natrontech/kubelab:latest
        # image: kubelab:local
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: pb-data-hostpath
          mountPath: /app/kubelab/pb_data
        resources:
          requests:
            memory: "16Gi"
            cpu: "4"
          limits:
            memory: "16Gi"
            cpu: "8"
      nodeSelector:
        hostpath-node: "true"
      volumes:
      - name: pb-data-hostpath
        persistentVolumeClaim:
          claimName: hostpath-pvc
  volumeClaimTemplates:
  - metadata:
      name: pb-data-hostpath
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: manual
      volumeMode: Filesystem
      volumeName: hostpath-pv
