deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubelab-service
  namespace: kubelab
spec:
  selector:
    app: kubelab
  ports:
    - protocol: TCP
      port: 8090
