deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubelab-ingress
  namespace: kubelab
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod-natron-cloud
    cert-manager.io/private-key-rotation-policy: Always
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-external
  rules:
  - host: kubelab.natr-demo.k8s.natron.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubelab-service
            port:
              number: 8090
  # tls:
  # - hosts:
  #   - kubelab.natr-demo.k8s.natron.cloud
  #   secretName: kubelab-tls
